--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -17,13 +17,16 @@
 -->
 <resources>
     <!-- the padding on the end of the statusbar -->
-    <dimen name="status_bar_padding_start">63px</dimen>
+    <dimen name="status_bar_padding_start">16.0dip</dimen>
 
     <!-- the padding on the end of the statusbar -->
-    <dimen name="status_bar_padding_end">63px</dimen>
+    <dimen name="status_bar_padding_end">8.0dip</dimen>
 
     <!-- Margin on the right side of the system icon group on Keyguard. -->
     <dimen name="system_icons_keyguard_padding_end">@dimen/status_bar_padding_end</dimen>
+
+    <!--  Lockscreen shortcut horizontal padding.  -->
+    <dimen name="keyguard_affordance_horizontal_offset">29dp</dimen>
 
     <!-- Margin on the left side of the carrier text on Keyguard -->
     <dimen name="keyguard_carrier_text_margin">95px</dimen>
